--- a/src/translations/client.csv
+++ b/src/translations/client.csv
@@ -13,6 +13,7 @@ advancedSearch.form.placeOfRegistrationHelperText,Helper text for input Place of
 advancedSearch.form.recordStatusAchived,Option for form field: status of record,Archived,Archivé
 advancedSearch.form.recordStatusAny,Option for form field: status of record,Any status,Tout statut
 advancedSearch.form.recordStatusCertified,Option for form field: status of record,Certified,Agréé
+advancedSearch.form.recordStatusCorrectionRequested,Option for form field: status of record,Correction requested,Correction demandée
 advancedSearch.form.recordStatusInReview,Option for form field: status of record,In review,En cours d'examen
 advancedSearch.form.recordStatusInprogress,Option for form field: status of record,In progress,En cours
 advancedSearch.form.recordStatusRegistered,Option for form field: status of record,Registered,Inscrit
@@ -1727,6 +1728,8 @@ regHome.inPro.selector.hospital.drafts,The title of In progress Hospitals,Health
 regHome.inPro.selector.own.drafts,The title of In progress own drafts,My drafts,Mes brouillons
 regHome.inProgress,The title of In progress,In progress,En cours
 regHome.issued,Label for registration status issued,Issued,Émis
+regHome.outbox.failed,Label for declaration status failed,Failed to send,Échec de l'envoi
+regHome.outbox.retry,"Label for ""Retry"" button in Outbox shown for records that failed to send,Retry,Réessayer",,
 regHome.outbox.statusArchiving,Label for application status Archiving,Archiving...,Archivage en cours
 regHome.outbox.statusCertifying,Label for declaration status Certifying,Certifying...,Certification en cours...
 regHome.outbox.statusIssuing,Label for declaration status Issuing,Issuing...,En cours d'émission...
