--- a/src/translations/client.csv
+++ b/src/translations/client.csv
@@ -167,6 +167,12 @@ certificate.receipt.service.5year,,{event} registration after 5 years of event,{
 certificate.receipt.service.targetDay,,{event} registration after 45 days of event,{event} Déclaration après 45 jours de l'événement.
 certificate.receipt.service.targetDay.amount,,৳ 25.00,৳ 25.00
 certificate.receipt.subheader,Subheader for receipt on payment on certificate,{event} Registration after {DOBDiff} of {DOE},{event} Déclaration après {DOBDiff} de {DOE}
+certificates.birth.certificate,Birth Certificate,Birth Certificate,Acte de naissance
+certificates.birth.certificate.copy,Birth Certificate Certified Copy,Birth Certificate Certified Copy,Copie certifiée conforme de l'acte de naissance
+certificates.death.certificate,Death Certificate,Death Certificate,Certificat de décès
+certificates.death.certificate.copy,Death Certificate Certified Copy,Death Certificate Certified Copy,Copie certifiée conforme du certificat de décès
+certificates.marriage.certificate,Marriage Certificate,Marriage Certificate,Acte de mariage
+certificates.marriage.certificate.copy,Marriage Certificate Certified Copy,Marriage Certificate Certified Copy,Copie certifiée conforme de l'acte de mariage
 changeEmail.validation.msg,Phone number validation message,Must be a valid email address,Doit être une adresse e-mail valide
 changePhone.validation.msg,Phone number validation message,Must be a valid 10 digit number that starts with 0,Doit être un numéro valide à {num} chiffres qui commence par {start}.
 config.advanced.search,This is used for the advanced search,Advanced Search,Recherche avancée
