--- a/src/translations/client.csv
+++ b/src/translations/client.csv
@@ -167,6 +167,7 @@ certificate.receipt.service.5year,,{event} registration after 5 years of event,{
 certificate.receipt.service.targetDay,,{event} registration after 45 days of event,{event} Déclaration après 45 jours de l'événement.
 certificate.receipt.service.targetDay.amount,,৳ 25.00,৳ 25.00
 certificate.receipt.subheader,Subheader for receipt on payment on certificate,{event} Registration after {DOBDiff} of {DOE},{event} Déclaration après {DOBDiff} de {DOE}
+certificate.selectTemplate,Select certificate template,Select certificate template,Sélectionnez un modèle de certificat
 certificates.birth.certificate,Birth Certificate,Birth Certificate,Acte de naissance
 certificates.birth.certificate.copy,Birth Certificate Certified Copy,Birth Certificate Certified Copy,Copie certifiée conforme de l'acte de naissance
 certificates.death.certificate,Death Certificate,Death Certificate,Certificat de décès
