Revert "fix: update incomplete button message"
This reverts commit 3f888543d2f5b76e1e4090f3f638bb156debd5cc.

--- a/src/translations/client.csv
+++ b/src/translations/client.csv
@@ -120,7 +120,7 @@ buttons.send,Submit button on submit modal,Confirm,Soumettre
 buttons.sendForApproval,Title for complete submit button,Send for approval,Envoyer pour approbation
 buttons.sendForReview,Submit Button Text,Send for review,Envoyer pour révision
 buttons.sendForUpdates,,Send for updates,Envoyer pour les mises à jour
-buttons.sendIncomplete,Title for Incomplete submit button,Send incomplete,Envoyer pour révision
+buttons.sendIncomplete,Title for Incomplete submit button,Send for review,Envoyer pour révision
 buttons.settings,Menu item settings,Settings,Paramètres
 buttons.start,Label of start button,Start,Démarrer
 buttons.status,Label of status button,Status,Statut
